feat: get topic (#1)
