# src/api/v1/models/topic.model.ts
@@ -10,10 +10,10 @@ export interface ITopicModel extends ITopic, mongoose.Document {
 }
 
 const TopicSchema = new mongoose.Schema({
-  name: { type: String, required: true },
+  name: { type: String, required: true, index: { unique: true } },
   description: { type: String, required: true },
-  status: { type: String, required: true, enum: ['ACTIVE', 'DELETED', 'INACTIVE'] },
-}, {versionKey: false, timestamps: true});
+  status: { type: String, required: true, enum: ['ACTIVE', 'DELETED', 'INACTIVE'], default: 'ACTIVE' },
+}, { versionKey: false, timestamps: true });
 
 const Topic = mongoose.model<ITopicModel>('Topic', TopicSchema);
 export default Topic;
