# swagger.yaml
@@ -13,6 +13,8 @@ servers:
 tags:
   - name: auth
     description: Mọi thứ về xác thực người dùng
+  - name: topic
+    description: Chủ đề
 paths:
   /auth/login:
     post:
@@ -120,6 +122,54 @@ paths:
         - petstore_auth:
             - write:pets
             - read:pets
+  /topics/{id}:
+    get:
+      tags:
+        - topic
+      summary: Lấy thông tin chủ đề theo ID
+      parameters:
+        - name: id
+          description: Topic ID
+          in: path
+          required: true
+          schema:
+            type : string
+            example: 6694e9136fe1f7bae3db86fc
+      operationId: getTopic
+      responses:
+        '200':
+          description: Thành công
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Topic'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Topic'
+        '404':
+          description: Không tìm thấy đề mục
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseError'
+              example:
+                timestamp: "2024-07-15T17:11:02.251Z"
+                status: 500
+                message: "Không tìm thấy đề mục"
+        '500':
+          description: Lỗi không xác định
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseError'
+              example:
+                timestamp: "2024-07-15T17:11:02.251Z"
+                status: 500
+                message: "Lỗi không xác định. Thử lại sau"
+      security:
+        - petstore_auth:
+            - write:pets
+            - read:pets
 components:
   schemas:
     BaseError:
@@ -189,116 +239,35 @@ components:
           format: date
       xml:
         name: userDTO
-    Order:
+    Topic:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        petId:
-          type: integer
-          format: int64
-          example: 198772
-        quantity:
-          type: integer
-          format: int32
-          example: 7
-        shipDate:
+        _id:
           type: string
-          format: date-time
-        status:
-          type: string
-          description: Order Status
-          example: approved
-          enum:
-            - placed
-            - approved
-            - delivered
-        complete:
-          type: boolean
-      xml:
-        name: order
-    Customer:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 100000
-        username:
-          type: string
-          example: fehguy
-        address:
-          type: array
-          xml:
-            name: addresses
-            wrapped: true
-          items:
-            $ref: '#/components/schemas/Address'
-      xml:
-        name: customer
-    Address:
-      type: object
-      properties:
-        street:
-          type: string
-          example: 437 Lytton
-        city:
-          type: string
-          example: Palo Alto
-        state:
-          type: string
-          example: CA
-        zip:
-          type: string
-          example: '94301'
-      xml:
-        name: address
-    Category:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
+          example: "6694e9136fe1f7bae3db86fc"
         name:
           type: string
-          example: Dogs
+          example: "Chủ đề 2"
+        description:
+          type: string
+          example: "Mô tả"
+        status:
+          type: string
+          enum:
+            - ACTIVE
+            - DELETED
+            - INACTIVE
+          example: "ACTIVE"
+        createdAt:
+          type: string
+          format: date-time
+          example: "2024-07-15T09:17:07.361Z"
+        updatedAt:
+          type: string
+          format: date-time
+          example: "2024-07-15T09:17:07.361Z"
       xml:
-        name: category
-    User:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        username:
-          type: string
-          example: theUser
-        firstName:
-          type: string
-          example: John
-        lastName:
-          type: string
-          example: James
-        email:
-          type: string
-          example: john@email.com
-        password:
-          type: string
-          example: '12345'
-        phone:
-          type: string
-          example: '12345'
-        userStatus:
-          type: integer
-          description: User Status
-          format: int32
-          example: 1
-      xml:
-        name: user
+        name: topic
     ApiResponse:
       type: object
       properties:
@@ -312,14 +281,7 @@ components:
       xml:
         name: '##default'
   requestBodies:
-    UserArray:
-      description: List of user object
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/User'
+
   securitySchemes:
     petstore_auth:
       type: oauth2
